src/curso/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port: 
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app_gateway-vs
spec:
  hosts: 
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - route:  
      - destination:
          host: app_gateway-service
          subset: v1
        weight: 50
      - destination:
          host: app_gateway-service
          subset: v2
        weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app_gateway-dr
spec:
  host: app_gateway-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B


---

apiVersion: v1
kind: Service
metadata:
  name: app_gateway-service
spec:
  type: LoadBalancer
  selector:
    app: app_gateway
  ports:
  - port: 8000      #URL
    targetPort: 80  #CONTAINER
    nodePort: 30001 #CLUSTER
